force-app/main/default/objects/breg_Email_Log__c/breg_Email_Log__c.object-meta.xml
<CustomObject>
    <label>Email Log</label>
    <nameField>
        <displayFormat>L-{0000000}</displayFormat>
        <label>Email Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Email Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>