force-app/main/default/objects/breg_Email_Log__c/fields/breg_Error_Message__c.field-meta.xml
<CustomField>
    <fullName>breg_Error_Message__c</fullName>
    <label>Error Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>