force-app/main/default/objects/breg_Email_Log__c/fields/breg_Task_Id__c.field-meta.xml
<CustomField>
    <fullName>breg_Task_Id__c</fullName>
    <label>Task Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>